<resources>
    <string name="app_name">J\'ANIILE↯</string>
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>
    <string name="debut_test">Test started</string>
    <string name="recherche_serv">Finding best serveur</string>
    <string name="fin">Test Finished</string>
    <string name="debut_ping">Ping Started</string>
    <string name="fin_ping">Ping Finished</string>
    <string name="debut_dl">Download Test Started</string>
    <string name="en_cours_dl">Download Test Progress</string>
    <string name="fin_dl">Download Test Finished</string>
    <string name="debut_ul">Upload Test Started</string>
    <string name="en_cours_ul">Upload Test Progress</string>
    <string name="fin_ul">Upload Test Finished</string>
    <string name="warn">Test Warning</string>
    <string name="fatal_error">Test Fatal Error</string>
    <string name="interruption">Test Interrupted</string>
    <string name="lien_serveur">Fetch Server Failed</string>
    <string name="Pret">Ready to use</string>
    <string name="debut">Begin Recording</string>
    <string name="fin_enr">Stop Recording</string>
    <string name="map">To the map</string>
    <string name="test_wifi">Wi-Fi Test</string>
    <string name="position">Position</string>
    <string name="choix_salle">Place name</string>
    <string name="ajouter_salle">Add position</string>
    <string name="etage0">flour 0</string>
    <string name="etage1">flour 1</string>
    <string name="show_result">Show Result</string>
    <string name="loop">Loop</string>
    <string name="reference">Reference test</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="day_test">Day test</string>
    <string name="version">v1.5 developpeur edition</string>
    <string name="informations">Informations</string>
    <string name="help">Help</string>
    <string name="contact">Contact us</string>
    <string name="stop_app">Stop application</string>
    <string name="support">Support us</string>
    <string name="send">Send</string>
    <string name="welcome">Welcome</string>
    <string name="pseudo">pseudo</string>
    <string name="choix_pseudo">Before using this incredible app, please select an username, to display your own Wifi result.</string>
    <string name="my_test">My test</string>
    <string name="dev_test">Developper\'s test</string>
    <string name="tri_par">Sort by</string>
    <string name="error_parametres">nothing to display. Check more option</string>
    <string name="bonus_code">Bonus code</string>
    <string name="valider">Validate</string>
    <string name="unlock_dev">You are a developpeur!</string>
    <string name="unlock_vdd">Achievement unlock. Welcome to Val de Durance!</string>
    <string name="bonus_txt">You have a bonus code? Use it now!</string>
    <string name="aide_titre_1">Make a wifi test</string>
    <string name="aide_paragraphe_1">To make a Wifi test, click on \"start speed test\". That\'s it! \nYou can also loop test: enable option "Loop". The blue label provide you an explanation of what is happening. \nAll test are save in a file, but it\'s hard to find it, so you can use the map. </string>
    <string name="aide_titre_2">Using map</string>
    <string name="aide_paragraphe_2">Map has been created to display your test result. Before begining a test, define a position. Long press the position where you want to display test result, press "add", and choose a name. You can now start a wifi test.\nUse "show result" to display all test. You will have many options, but the most import is "my test", other are for professional developper</string>
    <string name="aide_paragraphe_3">You need an accurate help? You have bug or improvement to suggest? Contact us!</string>
    <string name="rssi_wlan">WLAN RSSI</string>
    <string name="rssi_cellulaire">cellular RSSI</string>
</resources>
