<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/mes_tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/my_test" />

        <CheckBox
            android:id="@+id/dev_tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dev_test" />

        <CheckBox
            android:id="@+id/test_reference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/reference" />

        <CheckBox
            android:id="@+id/test_jour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/day_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/up_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tri_par"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"/>
        <TextView
            android:id="@+id/up_down_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>