<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7sp"
    tools:context=".HelpActivity">

    <TextView
        android:id="@+id/titre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aide_titre_1"
        android:textSize="20sp"
        android:padding="2sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/paragraphe1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aide_paragraphe_1"
        android:padding="2sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titre1"/>

    <TextView
        android:id="@+id/titre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aide_titre_2"
        android:textSize="20sp"
        android:padding="2sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paragraphe1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/paragraphe2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aide_paragraphe_2"
        android:padding="2sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titre2"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paragraphe2">

        <TextView
            android:id="@+id/paragraphe3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2sp"
            android:text="@string/aide_paragraphe_3"
            android:textSize="17sp" />

        <Button
            android:id="@+id/aide_contact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/contact"
            android:layout_margin="2sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>